third_party/WebKit/Source/WebKit2/UIProcess/API/mac/WKViewInternal.h
@@ -85,6 +85,7 @@ namespace WebKit {
 
 #if ENABLE(FULLSCREEN_API)
 - (WKFullScreenWindowController*)fullScreenWindowController;
+- (void)closeFullScreenWindowController;
 #endif
 
 - (void)_cacheWindowBottomCornerRect;
