third_party/WebKit/Source/WebKit2/UIProcess/mac/WKFullScreenWindowController.mm
@@ -436,6 +436,8 @@ static void exitCompositedModeRepaintCompleted(WKErrorRef, void* context)
     
     if (_isExitingFullScreen)
         [self finishedExitFullScreenAnimation:YES];
+
+    [super close];
 }
 
 #pragma mark -
