third_party/WebKit/Source/WebKit2/UIProcess/mac/WebFullScreenManagerProxyMac.mm
@@ -41,7 +41,7 @@ void WebFullScreenManagerProxy::invalidate()
     if (!m_webView)
         return;
     
-    [[m_webView fullScreenWindowController] close];
+    [m_webView closeFullScreenWindowController];
     m_webView = 0;
 }
 
